--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,13 @@ services:
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
 
-  pgadmin:
+  pgAdmin:
     image: dpage/pgadmin4
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@mail.com
       - PGADMIN_DEFAULT_PASSWORD=root
     ports:
       - 5050:80
-
+    depends_on:
+      - postgres
 
