--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "migrations:generate": "sequelize-cli migration:generate --name",
     "migrations:run": "sequelize-cli db:migrate",
     "migrations:revert": "sequelize-cli db:migrate:undo",
-    "migrations:delete": "sequelize-cli db:migrate:undo:all"
+    "migrations:delete": "sequelize-cli db:migrate:undo:all",
+    "e2e": "jest --config ./jest-e2e.json --verbose  --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +22,8 @@
     "eslint-plugin-prettier": "4.2.1",
     "jest": "^29.7.0",
     "nodemon": "2.0.19",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "@faker-js/faker": "7.4.0",
