tests to app, Dtos, login and routs protected with static key

--- a/.gitignore
+++ b/.gitignore
@@ -195,5 +195,6 @@ $RECYCLE.BIN/
 postgres_data
 mysql_data
 .vscode
+coverage_e2e
 
 # End of https://www.toptal.com/developers/gitignore/api/node,windows,linux,macos
