--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "migrations:run": "sequelize-cli db:migrate",
     "migrations:revert": "sequelize-cli db:migrate:undo",
     "migrations:delete": "sequelize-cli db:migrate:undo:all",
-    "e2e": "jest --config ./jest-e2e.json --verbose  --detectOpenHandles --forceExit",
-    "e2e:coverage": "jest --config ./jest-e2e.json --verbose  --detectOpenHandles --forceExit --coverage"
-
+    "e2e": "NODE_ENV=e2e jest --config ./jest-e2e.json --verbose  --detectOpenHandles --forceExit",
+    "e2e:coverage": "NODE_ENV=e2e --config ./jest-e2e.json --verbose  --detectOpenHandles --forceExit --coverage",
+    "seed:all": "sequelize-cli db:seed:all",
+    "seed:undo": "sequelize-cli db:seed:undo:all"
   },
   "keywords": [],
   "author": "",
@@ -42,6 +43,7 @@
     "passport-local": "1.0.0",
     "pg": "8.7.3",
     "sequelize": "6.21.3",
-    "sequelize-cli": "6.4.1"
+    "sequelize-cli": "6.4.1",
+    "umzug": "^3.5.0"
   }
 }
