--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "migrations:revert": "sequelize-cli db:migrate:undo",
     "migrations:delete": "sequelize-cli db:migrate:undo:all",
     "e2e": "NODE_ENV=e2e jest --config ./jest-e2e.json --verbose  --detectOpenHandles --forceExit",
+    "e2e:ci": "NODE_ENV=ci jest --config ./jest-e2e.json --verbose  --detectOpenHandles --forceExit",
     "e2e:coverage": "NODE_ENV=e2e --config ./jest-e2e.json --verbose  --detectOpenHandles --forceExit --coverage",
     "seed:all": "sequelize-cli db:seed:all",
     "seed:undo": "sequelize-cli db:seed:undo:all"
