configuration for githubactions

--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -1,30 +1,29 @@
 name : API CI
-# on: [push]  cada que se haga un commit se corre éste archivo, config para repos sensillos
 on:
   push:
     paths:
-      - "./api/**" # configuracíon para proyectos que tienen mś de un repo, aqui se ejecuta cuando hay cambios en la carpeta api
-      - ".github/workflows/api-ci.yml" # tambien se ejecuta con este archivo
+      - "./api/**"
+      - ".github/workflows/api-ci.yml"
 
 defaults:
   run:
-    working-directory: ./api # directorio de trabajo por default, tambien se puede obviar si hay un solo repo
+    working-directory: ./api
 
-jobs: # aquí se configuran los requerimientos del proyecto
-  unit-test: # job que va a correr la pruebas unitarias, nombre ramdom
-    runs-on: ubuntu-lates # maquina en la que corre (puede ser cualquier sistema operativo)
-    steps: # Pasos
-      - name: Checkout # chequea el repo
-        uses: actions/checkout@v3 # comando y version que tiene github para clonar el repo
-      - name: Setup Nodejs # configurando node
-        uses: actions/setup-node@v3 # accion para conf. node
-        with: # con
-          node-version: 14 # versión de node
-          cache: 'npm' # solicitando cahé
-          cache-dependency-path: ./api/packege-lock.json # de donde sale el cahé
-      - name: install #instalando dependencias
-        shell: bash # terminal de tipo bash
-        run: npm ci # ó install el ci es un comando que tiene node para pruebas de integración continua
-      - name: run unit test # corriendo las pruebas
+jobs:
+  unit-test:
+    runs-on: ubuntu-lates
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Nodejs
+        uses: actions/setup-node@v3
+        with:
+          node-version: 19
+          cache: 'npm'
+          cache-dependency-path: ./api/packege-lock.json
+      - name: install
+        shell: bash
+        run: npm ci
+      - name: run unit test
         shell: bash
         run: npm run test
